<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">新美芝</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="switch_theme">Switch theme</string>
    <string name="random_color">random color</string>
    <string name="menu_camera">拍照</string>
    <string name="menu_cord">记录</string>
    <string name="menu_setting">设定</string>
    <string name="menu_connect">连接</string>
    <string name="menu_share">分享</string>
    <string name="menu_about">关于设备</string>
    <string name="menu_help">帮助</string>
    <string name="menu_contract">售后联系方式</string>
    <string name="btn_start">开始</string>
    <string name="btn_pause">暂停</string>
    <string name="btn_end">停止</string>
    <string name="btn_bling">声音:开</string>
    <string name="btn_bling_off">声音:关</string>
    <string name="btn_restart">复位</string>
    <string name="rangbar_notify">请滑动选择治疗时间</string>
    <string name="bluetooth_off">蓝牙未开启</string>
    <string name="device_disconnected">设备未连接</string>
    <string name="device_connecting">设备正在连接中</string>
    <string name="device_connected">设备已连接</string>
    <string name="state_2_reconnect">请重新连接</string>
    <string name="state_2_open_blue">请打开蓝牙</string>
    <string name="light_red">红光</string>
    <string name="light_blue">蓝光</string>
</resources>