<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fcfcfc">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp">
        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/hugh"
            android:layout_centerInParent="true"
            app:border_width="2dp"
            app:border_color="#FF000000"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/png_camera"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="19sp"
            android:layout_marginLeft="20dp"
            android:textColor="#a6000000"
            android:text="@string/menu_camera"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/png_cord"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="19sp"
            android:layout_marginLeft="20dp"
            android:textColor="#a6000000"
            android:text="@string/menu_cord"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/png_setting"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="19sp"
            android:layout_marginLeft="20dp"
            android:textColor="#a6000000"
            android:text="@string/menu_setting"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/png_connect"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="19sp"
            android:layout_marginLeft="20dp"
            android:textColor="#a6000000"
            android:text="@string/menu_connect"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"></LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="19sp"
            android:layout_marginLeft="10dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:textColor="#a6000000"
            android:text="@string/menu_share"/>
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginRight="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/png_share"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="19sp"
            android:layout_marginLeft="10dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:textColor="#a6000000"
            android:text="@string/menu_about"/>
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginRight="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/png_about"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="19sp"
            android:layout_marginLeft="10dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:textColor="#a6000000"
            android:text="@string/menu_help"/>
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginRight="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/png_help"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="19sp"
            android:layout_marginLeft="10dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:textColor="#a6000000"
            android:text="@string/menu_contract"/>
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginRight="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/png_email"/>
    </RelativeLayout>
</LinearLayout>